tests/invalid/missing-comp-name.hcdf
<?xml version="1.0"?>
<hcdf version="1.0">
  <comp/>
</hcdf>
